--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "typescript": "^4.5.5",
